# Embedded-Intent-Recognizer

./: CMakeLists.txt  README.md
app/: main.cpp
include/: IntentRecognizer.h
model/: fact.txt  place.txt  time.txt  weather.txt
source/: IntentRecognizer.cpp
tests/: CMakeLists.txt  Unittests.cpp
